tests/negative/no_main.fc
// test: no-main-test
// compile-fail: true

void exit(int _);

void glavnaya(){
    exit(0);
}